src/stylesheets/forms.styl
input[type=text]
	border 1px solid #eee
	border-radius borderRadius

	padding .4em .6em
	color inputTextColor

button, .btn
	button-style()
	background-color buttonColor
	color white
	outline none
	&:hover
		background-color baseColor

	&.gray
		background-color lightGray
		color darkGray
		&:hover
			background-color darkGray
			color white

.controls
	margin 35px 0
	width 715px
	button
		font-size 16px
	.save
		float right

.timbuctoo-form
	fieldset
		border none
		padding 0

	legend
		font-weight bold
		background lightGray
		display block
		padding 1em .5em
		margin-left -.5em
		margin-bottom 1em
		width 100%

	form label
		font-family labelFont
		color labelColor
		display inline-block
		width 190px
		vertical-align middle
		font-size 14px

	form label + div
		display inline-block

	form input[type=text]
		width 500px

	.field
		margin-bottom 1em

	.readonly-editor
		font-size .8em
		line-height 150%
		display inline-block
		width 50%

